# teapot

./: README.ORG
src/: .depend  ANNOUNCE  CMakeLists.txt  Gencat  Genhelp  Genhelp~  Genversion  INSTALL  Makefile  Makefile~  NEWS  README  cat-de.88591  cat-de.88591.h  cat-en  cat-en.h  cat-nl  cat-nl.h  cat-pl  cat-pl.h  cat-uk_UA.KOI8-U.h  cat.h  complete.c  complete.h  config.h  config.h.in  context.c  context.h  csv.c  csv.h  default.h  display-gtk.c  display-gtk.c~  display.c  display.c~  display.h  display.h~  eval.c  eval.h  fteapot.fl  (+47 more)
src/.nl_types.h/: nl_types.h
src/doc/: .latex2html-init  Ein neues Leben für Teapot.mbox  Makefile  Makefile~  Mm2html  Mm2html~  Sr2html  Sr2html~  command  command.bat  editline  editline.bat  insTH.ed  sorted.bat  teapot.MM  teapot.doc  teapot.html  teapot.lyx  teapot.ps  unsorted  unsorted.bat  unsorted.ed
src/examples/: asqrt.README  asqrt.tp  blink.tp  counter.README  counter.tp  graphtest.ps  graphtest.sh~  life  life.README  load_save_time  load_save_time.README  load_save_time.sh  sqrt  sqrt.README
